@@ -518,9 +518,23 @@ cal11.time_comp = false;
 					</TD>
 					<TD width="1%" {tip text="Select nodes group"}>
 						<NOBR><INPUT class="radio light" type="radio" name="filter" value="0" CHECKED>{t}all{/t}</NOBR><BR>
-						<NOBR><INPUT class="radio light" type="radio" name="filter" value="1">{t}disconnected<!plural:item>{/t}</NOBR><BR>
-						<NOBR><INPUT class="radio light" type="radio" name="filter" value="2">{t}connected<!plural:item>{/t}</NOBR><BR>
+						<NOBR><INPUT class="radio light" type="radio" name="filter" value="1">{t}connected<!plural:item>{/t}</NOBR><BR>
+						<NOBR><INPUT class="radio light" type="radio" name="filter" value="2">{t}disconnected<!plural:item>{/t}</NOBR><BR>
 						<NOBR><INPUT class="radio light" type="radio" name="filter" value="3">{t}indebted owner{/t}</NOBR>
+					</TD>
+					<TD width="1%">
+						<IMG src="img/network.gif" alt="">
+					</TD>
+					<TD width="1%" nowrap>
+						<B>{t}Network:{/t}</B>
+					</TD>
+					<TD width="1%" {tip text="Select network"}>
+						<SELECT size="1" name="network">
+							<OPTION value="0" SELECTED>{t}- all networks -{/t}</OPTION>
+							{section name="networks" loop=$networks}
+							<OPTION value="{$networks[networks].id}">{$networks[networks].name|truncate:50:" ..."}</OPTION>
+							{/section}
+						</SELECT>&nbsp;
 					</TD>
 					<TD width="1%">
 						<IMG src="img/view.gif" alt="">
@@ -528,7 +542,7 @@ cal11.time_comp = false;
 					<TD width="1%">	
 			    			<B>{t}Sorting:{/t}</B>
 					</TD>
-					<TD width="95%" {tip text="Select sorting direction and criteria"}>
+					<TD width="92%" {tip text="Select sorting direction and criteria"}>
 						<SELECT SIZE="1" name="order">
 							<OPTION value="name" SELECTED>{t}Name{/t}</OPTION>
 							<OPTION value="id">{t}Id{/t}</OPTION> 
